Table users {
  id integer [primary key, increment, note: "使用者的唯一標識符"]
  name varchar(255) [not null, note: "使用者的全名"]
  email varchar(255) [not null, unique, note: '使用者的電子郵件地址，必須是唯一的']
  password varchar(255) [not null, note: "使用者的密碼"]
  created_at timestamp [default: `now()`, note: "建立時間 UTC"]
  updated_at timestamp [default: `now()`, note: "更新時間 UTC"]
  
  indexes {
    email [unique, name: "idx_users_email"]
    created_at [name: "idx_users_created_at"]
  }
}

Table portal_pages {
  id integer [primary key, increment, note: "Portal Page 的唯一標識符"]
  user_id integer [not null, note: "擁有此頁面的使用者 ID"]
  slug varchar(255) [not null, unique, note: "頁面的 URL 識別名稱，必須是唯一的"]
  title varchar(255) [not null, note: "頁面標題或顯示名稱"]
  bio text [note: "使用者的個人簡介或描述"]
  profile_image_url varchar(500) [note: "個人頭像圖片的 URL"]
  theme varchar(100) [note: "頁面主題設定"]
  created_at timestamp [default: `now()`, note: "建立時間 UTC"]
  updated_at timestamp [default: `now()`, note: "更新時間 UTC"]
  
  indexes {
    user_id [name: "idx_portal_pages_user_id"]
    slug [unique, name: "idx_portal_pages_slug"]
    created_at [name: "idx_portal_pages_created_at"]
  }
}

Ref: portal_pages.user_id > users.id [delete: cascade, note: "Portal Page 屬於一個使用者"]

Table links {
  id integer [primary key, increment, note: "Link 的唯一標識符"]
  portal_page_id integer [not null, note: "所屬的 Portal Page ID"]
  title varchar(255) [not null, note: "連結的顯示標題"]
  url varchar(500) [not null, note: "連結的目標 URL"]
  description text [note: "連結的描述或說明（選填）"]
  icon_url varchar(500) [note: "連結的圖示 URL（選填）"]
  display_order integer [not null, note: "連結在頁面上的顯示順序"]
  created_at timestamp [default: `now()`, note: "建立時間 UTC"]
  updated_at timestamp [default: `now()`, note: "更新時間 UTC"]
  
  indexes {
    portal_page_id [name: "idx_links_portal_page_id"]
    created_at [name: "idx_links_created_at"]
  }
}

Ref: links.portal_page_id > portal_pages.id [delete: cascade, note: "Link 屬於一個 Portal Page（聚合根）"]
